change flex-shrink on the banner figure to try and fix screen on mobile

--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -26,9 +26,11 @@ a {
 .banner {
     display: flex;
     gap: 64px;
-    flex-wrap: nowrap;
 }
 
+.banner figure {
+    flex-shrink: 2;
+}
 
 hr {
     flex: 0 0 100%;
